--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<!-- Write your HTML in this file -->
+<!doctype html>
+<html lang="en">
+ <head>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="company.css">
+   <link rel="stylesheet" type="text/css" href="engineering-department.css">
+   <link rel="stylesheet" type="text/css" href="project-x-launch.css">
+   <link rel="stylesheet" type="text/css" href="typography.css">
+     <title>This is a title</title>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="A website devoted to pictures of all my favorite cats, kittens and felines">
+     <meta name="keywords" content="cats, kittens, felines, lions, tigers">
+     <meta name="author" content="Cat Perry">
+   </head>
 
+   <body>
+
+   </body>
+</html>
